<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="songs">歌曲</string>
    <string name="albums">专辑</string>
    <string name="artists">歌手</string>
    <string name="genres">类型</string>
    <string name="folders">文件夹</string>
    <string name="playlists">播放列表</string>

    <string name="play">播放</string>
    <string name="add_to_playlist">添加到播放列表</string>
    <string name="go_to_album">打开专辑</string>
    <string name="go_to_artist">打开歌手</string>
    <string name="play_next">下一曲</string>
    <string name="delete_from_device">从设备中删除</string>

    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_year">年份</string>
    <string name="sort_order_entry_duration">时长</string>
    <string name="sort_order_entry_number_of_songs">歌曲数量</string>

    <string name="number_song_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> 歌曲已添加播放列表.</string>
    <string name="number_songs_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> 歌曲已添加播放列表.</string>

    <string name="create">创建</string>
    <string name="delete">删除</string>

    <string name="create_new_playlist">创建新播放列表</string>
    <string name="delete_song_prompt">删除歌曲?</string>
    <string name="enter_playlist_name">输入播放列表名称…</string>
    <string name="playlist_created">播放列表已创建!</string>
    <string name="unable_create_playlist">无法创建播放列表!</string>

    <string name="media_playback">Media Playback</string>
    <string name="media_playback_controls">Media playback controls</string>

    <string name="all_songs">所有歌曲</string>
    <string name="casting_to_x">投播到 %1$s</string>
    <string name="nothing_playing">无可播放媒体</string>
    <string name="now_playing_format">%1$s | %2$s</string>

    <string name="queue_ended">队列结束</string>
    <string name="no_song_next">队列无歌曲</string>

    <string name="play_song_error">无法播放歌曲</string>
    <string name="shuffle_no_songs_error">无可随机播放的歌曲</string>
    <string name="new_playlist">新播放列表</string>
    <string name="lyrics">歌词</string>
    <string name="up_next">顺序队列中下一曲</string>
    <string name="no_results">无结果</string>
    <string name="search_hint">搜索歌曲、歌手、专辑…</string>

    <string name="light">明亮</string>
    <string name="dark">夜间</string>
    <string name="black">黑色</string>

    <string name="settings">设置</string>
    <string name="choose_start_page">选择启动页面.</string>
    <string name="start_page">启动页面</string>
    <string name="choose_theme">选择主题</string>
    <string name="theme">主题</string>

    <string name="load_artist_image">使用Last.fm的歌手艺术照</string>
    <string name="load_album_image">使用Last.fm的专辑封面</string>
    <string name="load_artist_image_summary">从Last.fm获取歌手艺术照</string>
    <string name="load_album_image_summary">从Last.fm获取专辑封面 (当无法从本地歌曲中获取时)</string>


    <string name="set_enabled_effect">启用音效</string>
    <string name="set_enabled_stereo_width">启用声场</string>
    <string name="set_enabled_chafen">启用差分</string>

</resources>
