<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Naman Dwivedi.
  ~
  ~ Licensed under the GNU General Public License v3
  ~
  ~ This is free software: you can redistribute it and/or modify it
  ~ under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="播放器设置"
        app:iconSpaceReserved="false">
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="theme_preference"
            android:summary="@string/choose_theme"
            android:title="@string/theme"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="songs"
            android:entries="@array/pref_startpage_entries"
            android:entryValues="@array/pref_startpage_values"
            android:key="start_page_preference"
            android:summary="@string/choose_start_page"
            android:title="@string/start_page"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="lastfm_artist_image"
            android:summary="@string/load_artist_image_summary"
            android:title="@string/load_artist_image"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="lastfm_album_image"
            android:summary="@string/load_album_image_summary"
            android:title="@string/load_album_image"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="set_sleep_preference"
            android:summary="指定时间后停止播放"
            android:title="开启睡眠定时"
            app:iconSpaceReserved="false" />

        <SeekBarPreference
            android:defaultValue="30"
            android:max="120"
            android:key="set_sleep_time_preference"
            android:title="睡眠定时时间（分钟）"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>


    <PreferenceCategory android:title="音效设置"
        app:iconSpaceReserved="false">
        <ListPreference
            android:defaultValue="44100"
            android:entries="@array/samplerate_values"
            android:entryValues="@array/samplerate_values"
            android:key="set_samplerate_preference"
            android:summary="修改后播放下一首时生效"
            android:title="采样率"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="set_enabled_effect_preference"
            android:summary="@string/set_enabled_effect"
            android:title="@string/set_enabled_effect"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="推荐"
            android:entries="@array/eq_entries"
            android:entryValues="@array/eq_values"
            android:key="select_eq_preference"
            android:summary="选择预设均衡参数，选择自定义则需手动编辑均衡参数"
            android:title="预设EQ"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:defaultValue="filter 0 80 0.7 2.5\nfilter 1 200 1 -4\nfilter 2 800 1 -7.5\nfilter 3 3980 1 0\nfilter 4 11930 0.7 1"
            android:key="set_eqparam"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="编辑自定义EQ"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="set_enabled_stereo_width_preference"
            android:summary="设置是否开启声场"
            android:title="启用声场"
            app:iconSpaceReserved="false" />

<!--        <ListPreference-->
<!--            android:defaultValue="10"-->
<!--            android:entries="@array/stereo_width_values"-->
<!--            android:entryValues="@array/stereo_width_values"-->
<!--            android:key="set_stereo_width_preference"-->
<!--            android:summary="选择声场大小"-->
<!--            android:title="声场数值"-->
<!--            app:iconSpaceReserved="false" />-->

        <SeekBarPreference
            android:defaultValue="10"
            android:max="20"
            android:key="set_stereo_width_preference"
            android:title="声场数值"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="set_enabled_chafen_preference"
            android:summary="设置是否开启差分"
            android:title="启用差分"
            app:iconSpaceReserved="false" />

<!--        <ListPreference-->
<!--            android:defaultValue="20"-->
<!--            android:entries="@array/enabled_chafen_values"-->
<!--            android:entryValues="@array/enabled_chafen_values"-->
<!--            android:key="set_chafen_preference"-->
<!--            android:summary="选择差分大小"-->
<!--            android:title="差分数值"-->
<!--            app:iconSpaceReserved="false" />-->

        <SeekBarPreference
            android:defaultValue="20"
            app:min="1"
            android:max="50"
            android:key="set_chafen_preference"
            android:title="差分数值"
            app:iconSpaceReserved="false"/>


    </PreferenceCategory>
    <PreferenceCategory  android:title="硬膝压缩器"
        app:iconSpaceReserved="false">


        <SwitchPreference
            android:defaultValue="false"
            android:key="set_enabled_compressor_preference"
            android:title="启用硬膝压缩器（压限器）"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:defaultValue="-20"
            app:min="-50"
            android:max="0"
            android:key="set_threshold_preference"
            android:title="阈值（分贝）"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:defaultValue="2"
            app:min="1"
            android:max="10"
            android:key="set_ratio_preference"
            android:title="压缩比（比值）"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:defaultValue="4"
            app:min="0"
            android:max="100"
            android:key="set_attack_preference"
            android:title="启动时间（毫秒）"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:defaultValue="60"
            app:min="0"
            android:max="100"
            android:key="set_release_time_preference"
            android:title="释放时间（毫秒）"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="set_auto_gain_preference"
            android:title="启用自动增益"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:defaultValue="0"
            app:min="-32"
            android:max="8"
            android:key="set_gain_preference"
            android:title="增益（分贝）"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:defaultValue="10"
            app:min="0"
            android:max="100"
            android:key="set_threshold_width_preference"
            android:title="阈值宽度（毫秒）"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>


</PreferenceScreen>